FIX for 100vh on mobile

--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -7,13 +7,18 @@
   flex-shrink: 0;
   overflow-x: hidden;
   border-right: solid 1px var(--c-grey-1);
+  /* mobile vh fix */
+  max-height: calc(var(--vh, 1vh) * 100);
 }
 .container--main {
   flex-grow: 1;
   overflow-x: scroll;
   color: var(--c-grey-5);
+  /* background pattern */
   background-color: var(--c-grey-2);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='6' height='6' viewBox='0 0 4 4'%3E%3Cpath fill='%23e0e8ff' fill-opacity='1' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+  /* mobile vh fix */
+  max-height: calc(var(--vh, 1vh) * 100);
 }
 .landing-page--top {
   position: fixed;
@@ -61,9 +66,6 @@
   background-color: var(--c-accent);
   color: white;
   cursor: pointer;
-}
-.scroll-to-bottom-fix {
-  padding-bottom: 4rem;
 }
 
 @media (min-width: 43em) {
